# preferential_bo

./: .gitignore  LICENSE  README.md  gp_models.ipynb  pyproject.toml
models/: multi_task_gp.py  preferential_gp.py
utils/: func.py
